# internal/web/tasks/api.gen.go
@@ -20,6 +20,7 @@ type Task struct {
 	Id          *int    `json:"id,omitempty"`
 	IsDone      *bool   `json:"is_done,omitempty"`
 	Title       *string `json:"title,omitempty"`
+	UserId      *int    `json:"user_id,omitempty"`
 }
 
 // PostTasksJSONRequestBody defines body for PostTasks for application/json ContentType.
@@ -42,6 +43,9 @@ type ServerInterface interface {
 	// Update a tasks
 	// (PATCH /tasks/{id})
 	UpdateTasks(ctx echo.Context, id int) error
+	// Getting information by a specific user id
+	// (GET /tasks/{user_id})
+	GetTasksByUserID(ctx echo.Context, userId int) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -99,6 +103,22 @@ func (w *ServerInterfaceWrapper) UpdateTasks(ctx echo.Context) error {
 	return err
 }
 
+// GetTasksByUserID converts echo context to params.
+func (w *ServerInterfaceWrapper) GetTasksByUserID(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId int
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetTasksByUserID(ctx, userId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -131,6 +151,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/tasks", wrapper.PostTasks)
 	router.DELETE(baseURL+"/tasks/:id", wrapper.DeleteTasks)
 	router.PATCH(baseURL+"/tasks/:id", wrapper.UpdateTasks)
+	router.GET(baseURL+"/tasks/:user_id", wrapper.GetTasksByUserID)
 
 }
 
@@ -201,6 +222,23 @@ func (response UpdateTasks200JSONResponse) VisitUpdateTasksResponse(w http.Respo
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetTasksByUserIDRequestObject struct {
+	UserId int `json:"user_id"`
+}
+
+type GetTasksByUserIDResponseObject interface {
+	VisitGetTasksByUserIDResponse(w http.ResponseWriter) error
+}
+
+type GetTasksByUserID200JSONResponse []Task
+
+func (response GetTasksByUserID200JSONResponse) VisitGetTasksByUserIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get all tasks
@@ -215,6 +253,9 @@ type StrictServerInterface interface {
 	// Update a tasks
 	// (PATCH /tasks/{id})
 	UpdateTasks(ctx context.Context, request UpdateTasksRequestObject) (UpdateTasksResponseObject, error)
+	// Getting information by a specific user id
+	// (GET /tasks/{user_id})
+	GetTasksByUserID(ctx context.Context, request GetTasksByUserIDRequestObject) (GetTasksByUserIDResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -331,6 +372,31 @@ func (sh *strictHandler) UpdateTasks(ctx echo.Context, id int) error {
 		return err
 	} else if validResponse, ok := response.(UpdateTasksResponseObject); ok {
 		return validResponse.VisitUpdateTasksResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetTasksByUserID operation middleware
+func (sh *strictHandler) GetTasksByUserID(ctx echo.Context, userId int) error {
+	var request GetTasksByUserIDRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetTasksByUserID(ctx.Request().Context(), request.(GetTasksByUserIDRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetTasksByUserID")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetTasksByUserIDResponseObject); ok {
+		return validResponse.VisitGetTasksByUserIDResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
