# openapi/openapi.yaml
@@ -35,6 +35,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+  /tasks/{user_id}:
+    get:
+      summary: Getting information by a specific user id
+      operationId: "GetTasksByUserID"
+      tags:
+        - tasks
+      parameters:
+        - in: path
+          required: true
+          name: user_id
+          schema:
+            type: integer
+            description: the id of getting information
+      responses:
+        '200':
+          description: successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
   /tasks/{id}:
     patch:
       summary: Update a tasks
@@ -110,6 +132,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+
   /users/{id}:
     patch:
       summary: Update a users
@@ -157,6 +180,8 @@ components:
     Task:
       type: object
       properties:
+        user_id:
+          type: integer
         id:
           type: integer
         is_done:
@@ -165,6 +190,7 @@ components:
           type: string
         description:
           type: string
+
     User:
       type: object
       properties:
